# portfolio-quote

./: .gitignore  Makefile  README.md  pyproject.toml
portfolioq/: __init__.py
portfolioq-web/: Start.py
portfolioq-web/pages/: Performance.py
portfolioq/db/: __init__.py  connector.py  models.py  tables.py
portfolioq/mw/: __init__.py  ibkr.py  mock.py  nbp.py  xtb.py
portfolioq/web/: __init__.py  __main__.py  context.py
portfolioq/web/pages/: dividends.py  start.py  tax.py  value.py
tests/: test_mock_stream.py  test_mw_ibkr.py  test_mw_nbp.py
